--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC"-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC"-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 
 <head>
@@ -6,11 +6,16 @@
 
 	<title>Комплименты</title>
 
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
 	<link rel="stylesheet" href="index.css">
 </head>
 
 	<body>
 		<h1>Получение комплиментов</h1>
+		<p>Для получения комплимента перейдите по ссылке</p>
 
 		<a href="complims.html">Получить комплимент для Юлии Владимировны</a>
 	</body>
