--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 </head>
 
 	<body>
-		<h1>Получение комплиментов</h1>
+		<h1 style= "text-align: center;">Получение комплиментов</h1>
+
 		<p>Для получения комплимента перейдите по ссылке</p>
 
-		<a href="complims.html">Получить комплимент для Юлии Владимировны</a>
+		<div style="text-align:center;">
+			<a href="complims.html">Получить комплимент для Юлии Владимировны</a>
+		</div>
 	</body>
 
 </html>
